--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,17 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>یونی کٌد</title>
     <link rel="icon" href="/images/logo.png" />
-    <script type="module" src="http://localhost:5173/@vite/client"></script>
-    <script type="module">
-      import RefreshRuntime from "http://localhost:5173/@react-refresh";
-      RefreshRuntime.injectIntoGlobalHook(window);
-      window.$RefreshReg$ = () => {};
-      window.$RefreshSig$ = () => (type) => type;
-      window.__vite_plugin_react_preamble_installed__ = true;
-    </script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="http://localhost:5173/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
